# cs-467

./: README.md
docs/: DEV_ENV_SETUP.md  LCD_SETUP.md  SENSOR_SETUP  macOSSetup.md  windows-SetUp.md
humidity-sensor/: Cargo.toml  Embed.toml  memory.x
humidity-sensor/.cargo/: config.toml
humidity-sensor/src/: display.rs  led_strip.rs  leds.rs  main.rs  sensor.rs
scripts/: lint.sh  update.sh
