[package]
edition = "2021"
name = "humidity-sensor"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["rp2040"]
rp2040 = ["embassy-rp/rp2040"]

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.10.0", git = "https://github.com/embassy-rs/embassy", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt", "embassy-time-driver"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

